Added StripeSynchronization. Improvements in parsing XML. #171 #175